--- a/example/config.ini
+++ b/example/config.ini
@@ -1,12 +1,13 @@
 [cd_key]
 path = cd-key.txt
-padding_x = 4
-padding_y = 4
+padding_x = 2
+padding_y = 1
 border = 1
 bg_color = white
 anchor =
-x = 145
-y = 445
+x = 150
+y = 438
+label = CD-KEY
 
 [bg_image]
 path = background.gif
